🔊 Provide more fine-grained logs